--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="custom_purple">#8282db</color>
+    <color name="flesh_tint">#feede8</color>
+    <color name="custom_light_blue">#b9d3ea</color>
+    <color name="custom_grey">#ececec</color>
+    <color name="like_yellow">#ffd600</color>
+
 </resources>
